much refactoring of code examples and organizing EVERYTHING. Templates will help a ton moving forward.

--- a/app/mardownExamples/feedback/07.md
+++ b/app/mardownExamples/feedback/07.md
@@ -1,3 +1,20 @@
 ```javascript
-<CircularProgress value={30} size="120px" />
+export function ToastOneFunction() {
+  const toast = useToast();
+  return (
+    <Button
+      onClick={() =>
+        toast({
+          title: "You did It!",
+          description: "You made toast! Great work!",
+          status: "success",
+          duration: 9000,
+          isClosable: true,
+        })
+      }
+    >
+      Make Toast!
+    </Button>
+  );
+}
 ```
