--- a/app/mardownExamples/feedback/08.md
+++ b/app/mardownExamples/feedback/08.md
@@ -1,3 +1,31 @@
 ```javascript
-<CircularProgress value={59} size="100px" thickness="4px" />
+export function ToastTwoFunction() {
+  const toast = useToast();
+  return (
+    <Button
+      onClick={() =>
+        toast({
+          position: "bottom-left",
+          render: () => (
+            <Flex
+              color={colors.mainAccent4}
+              p={2}
+              bg={colors.mainAccent3}
+              borderRadius="20px"
+              justifyContent={"center"}
+              alignItems={"center"}
+              fontFamily="monospace"
+              fontSize="20px"
+              fontWeight="bold"
+            >
+              Is it Friday yet?
+            </Flex>
+          ),
+        })
+      }
+    >
+      Got Toast?
+    </Button>
+  );
+}
 ```
