--- a/app/mardownExamples/feedback/09.md
+++ b/app/mardownExamples/feedback/09.md
@@ -1,3 +1,37 @@
 ```javascript
-<CircularProgress value={30} color="orange.400" thickness="12px" />
+export function ToastThreeFunction() {
+  const toast = useToast();
+  const toastIdRef = useRef<number | null>(null);
+
+  function close() {
+    if (toastIdRef.current) {
+      toast.close(toastIdRef.current);
+    }
+  }
+
+  function closeAll() {
+    toast.closeAll();
+  }
+
+  function addToast() {
+    toastIdRef.current = toast({
+      description: "I am nom-nom toasty toast! 🍞 ",
+    }) as number;
+  }
+
+  return (
+    <Wrap>
+      <Button onClick={addToast} type="button" sx={buttonStyles}>
+        Make Toast
+      </Button>
+      <Button onClick={close} type="button" sx={buttonStyles}>
+        Eat toast
+      </Button>
+      <Button onClick={closeAll} type="button" sx={buttonStyles}>
+        Eat all toast
+      </Button>
+    </Wrap>
+  );
+}
+
 ```
