--- a/app/mardownExamples/feedback/10.md
+++ b/app/mardownExamples/feedback/10.md
@@ -1,5 +1,14 @@
 ```javascript
-<CircularProgress value={40} color="green.400">
-  <CircularProgressLabel>40%</CircularProgressLabel>
-</CircularProgress>
+
+export function ToastFourFunction() {
+  const toast = useToast();
+  const toastIdRef = useRef<number | null>(null);
+
+  function update() {
+    if (toastIdRef.current) {
+      toast.update(toastIdRef.current, {
+        description: "I am the Newb Toast. 👶",
+      });
+    }
+  }
 ```
