--- a/app/mardownExamples/feedback/12.md
+++ b/app/mardownExamples/feedback/12.md
@@ -1,3 +1,27 @@
 ```javascript
-<Progress value={80} />
+export function ToastSixFunction() {
+  const toast = useToast();
+  const variants = ["solid", "subtle", "left-accent", "top-accent"];
+
+  return (
+    <Wrap>
+      {variants.map((variant, i) => (
+        <WrapItem key={i}>
+          <Button
+            sx={buttonStyles}
+            onClick={() =>
+              toast({
+                title: `I am a very ${variant} toast`,
+                variant: variant,
+                isClosable: true,
+              })
+            }
+          >
+            {variant} toast
+          </Button>
+        </WrapItem>
+      ))}
+    </Wrap>
+  );
+}
 ```
