--- a/app/mardownExamples/feedback/13.md
+++ b/app/mardownExamples/feedback/13.md
@@ -1,3 +1,30 @@
 ```javascript
-<Progress hasStripe value={64} />
+export function ToastSevenFunction() {
+  const toast = useToast({
+    position: "top",
+    title:
+      "I am some FINE and quite SHINY toast! Honestly though, I look silly, don't I?",
+    containerStyle: {
+      width: "400px",
+      maxWidth: "80%",
+    },
+  });
+
+  return (
+    <Button
+      bg={colors.mainAccent2}
+      onClick={() => {
+        toast({
+          containerStyle: {
+            boxShadow: "0px 4px 10px rgba(255, 255, 255, 0.9)",
+            fontFamily: "monospace",
+            fontSize: "20px",
+          },
+        });
+      }}
+    >
+      Click for toast with SNAZZY container!
+    </Button>
+  );
+}
 ```
