--- a/app/mardownExamples/feedback/15.md
+++ b/app/mardownExamples/feedback/15.md
@@ -1,3 +1,21 @@
 ```javascript
-<Progress colorScheme="orange" size="md" value={30} />
+export function ToastNineFunction() {
+  const toast = useToast();
+  const id = "test-toast";
+  return (
+    <Button
+      sx={buttonStyles}
+      onClick={() => {
+        if (!toast.isActive(id)) {
+          toast({
+            id,
+            title: "There is no other me. I cannot be duplicated.",
+          });
+        }
+      }}
+    >
+      No duplicates!
+    </Button>
+  );
+}
 ```
