--- a/app/mardownExamples/feedback/06.md
+++ b/app/mardownExamples/feedback/06.md
@@ -1,3 +1,17 @@
 ```javascript
-<CircularProgress value={80} />
+function useRemoteData(): { data: any, loading: any, error: any } {
+  throw new Error("Function not implemented.");
+}
+
+function Card() {
+  const { data, loading, error } = useRemoteData();
+  if (error) return <Box children="error" />;
+  return (
+    <Box>
+      <Skeleton isLoaded={!loading}>
+        <Heading>{data.title}</Heading>
+      </Skeleton>
+    </Box>
+  );
+}
 ```
