--- a/app/mardownExamples/feedback/11.md
+++ b/app/mardownExamples/feedback/11.md
@@ -1,3 +1,34 @@
 ```javascript
-<CircularProgress isIndeterminate color="green.300" />
+export function ToastFiveFunction() {
+  const toast = useToast();
+  const statuses: ("success" | "error" | "warning" | "info" | "loading")[] = [
+    "success",
+    "error",
+    "warning",
+    "info",
+    "loading",
+  ];
+
+  return (
+    <Wrap>
+      {statuses.map((currentStatus, i) => (
+        <WrapItem key={i}>
+          <Button
+            sx={buttonStyles}
+            fontSize="13px"
+            onClick={() =>
+              toast({
+                title: `I'm toast of the ${currentStatus.toUpperCase()} variety.`,
+                status: currentStatus,
+                isClosable: true,
+              })
+            }
+          >
+            Show {currentStatus} toast
+          </Button>
+        </WrapItem>
+      ))}
+    </Wrap>
+  );
+}
 ```
