--- a/app/mardownExamples/feedback/14.md
+++ b/app/mardownExamples/feedback/14.md
@@ -1,3 +1,34 @@
 ```javascript
-<Progress colorScheme="red" size="sm" value={20} />
+export function ToastEightFunction() {
+  const toast = useToast();
+  const positions: ToastPosition[] = [
+    "top",
+    "top-right",
+    "top-left",
+    "bottom",
+    "bottom-right",
+    "bottom-left",
+  ];
+
+  return (
+    <Wrap>
+      {positions.map((position, i) => (
+        <WrapItem key={i}>
+          <Button
+            sx={buttonStyles}
+            onClick={() =>
+              toast({
+                title: `${position}`,
+                position: position,
+                isClosable: true,
+              })
+            }
+          >
+            {position}
+          </Button>
+        </WrapItem>
+      ))}
+    </Wrap>
+  );
+}
 ```
