almost done refactoring

--- a/app/mardownExamples/disclosure/12.md
+++ b/app/mardownExamples/disclosure/12.md
@@ -45,6 +45,12 @@
     <TabPanel>
       <p>two!</p>
     </TabPanel>
+    <TabPanel>
+      <p>three!</p>
+    </TabPanel>
+    <TabPanel>
+      <p>four!</p>
+    </TabPanel>
   </TabPanels>
 </Tabs>
 ```
