--- a/app/mardownExamples/disclosure/11.md
+++ b/app/mardownExamples/disclosure/11.md
@@ -1,21 +1,25 @@
 ```javascript
-<Tabs position="relative" variant="unstyled">
-  <TabList>
-    <Tab>One</Tab>
-    <Tab>Two</Tab>
-    <Tab>Three</Tab>
-  </TabList>
-  <TabIndicator mt="-1.5px" height="2px" bg="pink.500" borderRadius="2px" />
-  <TabPanels>
-    <TabPanel>
-      <p>one!</p>
-    </TabPanel>
-    <TabPanel>
-      <p>two!</p>
-    </TabPanel>
-    <TabPanel>
-      <p>three!</p>
-    </TabPanel>
-  </TabPanels>
+<TabList>
+  <Tab>One</Tab>
+  <Tab>Two</Tab>
+  <Tab>Three</Tab>
+</TabList>
+<TabIndicator
+  mt="-1.5px"
+  height="2px"
+  bg="pink.500"
+  borderRadius="2px"
+/>
+<TabPanels>
+  <TabPanel>
+    <p>one!</p>
+  </TabPanel>
+  <TabPanel>
+    <p>two!</p>
+  </TabPanel>
+  <TabPanel>
+    <p>three!</p>
+  </TabPanel>
+</TabPanels>
 </Tabs>
 ```
