--- a/app/mardownExamples/disclosure/18.md
+++ b/app/mardownExamples/disclosure/18.md
@@ -1,20 +1,44 @@
 ```javascript
-<Tabs isFitted index={tabIndex} onChange={handleTabsChange}>
-  <TabList>
-    <Tab>One</Tab>
-    <Tab>Two</Tab>
-    <Tab>Three</Tab>
-  </TabList>
-  <TabPanels>
-    <TabPanel>
-      <p>Click the tabs or pull the slider around</p>
-    </TabPanel>
-    <TabPanel>
-      <p>Yeah yeah. What's up?</p>
-    </TabPanel>
-    <TabPanel>
-      <p>Oh, hello there.</p>
-    </TabPanel>
-  </TabPanels>
-</Tabs>
+export function ControlledTabs() {
+  const [tabIndex, setTabIndex] = useState(0);
+
+  const handleSliderChange = (event: React.ChangeEvent<HTMLInputElement>) => {
+    setTabIndex(parseInt(event.target.value, 10));
+  };
+
+  const handleTabsChange = (index: number) => {
+    setTabIndex(index);
+  };
+
+  return (
+    <Box>
+      <input
+        type="range"
+        min="0"
+        max="2"
+        value={tabIndex}
+        onChange={handleSliderChange}
+      />
+
+      <Tabs isFitted index={tabIndex} onChange={handleTabsChange}>
+        <TabList>
+          <Tab>One</Tab>
+          <Tab>Two</Tab>
+          <Tab>Three</Tab>
+        </TabList>
+        <TabPanels>
+          <TabPanel>
+            <p>Click the tabs or pull the slider around</p>
+          </TabPanel>
+          <TabPanel>
+            <p>Yeah yeah. What's up?</p>
+          </TabPanel>
+          <TabPanel>
+            <p>Oh, hello there.</p>
+          </TabPanel>
+        </TabPanels>
+      </Tabs>
+    </Box>
+  );
+}
 ```
