theme colors implemented

--- a/app/mardownExamples/feedback/08.md
+++ b/app/mardownExamples/feedback/08.md
@@ -8,9 +8,9 @@ export function ToastTwoFunction() {
           position: "bottom-left",
           render: () => (
             <Flex
-              color={colors.mainAccent4}
+              color={"darkAccent_2"}
               p={2}
-              bg={colors.mainAccent3}
+              bg={"accent_3"}
               borderRadius="20px"
               justifyContent={"center"}
               alignItems={"center"}
