--- a/app/mardownExamples/feedback/13.md
+++ b/app/mardownExamples/feedback/13.md
@@ -12,7 +12,7 @@ export function ToastSevenFunction() {
 
   return (
     <Button
-      bg={colors.mainAccent2}
+      bg={"accent_2"}
       onClick={() => {
         toast({
           containerStyle: {
