--- a/app/mardownExamples/disclosure/04.md
+++ b/app/mardownExamples/disclosure/04.md
@@ -3,7 +3,7 @@
   <AccordionItem>
     <h2>
       <AccordionButton
-        _expanded={{ bg: `${colors.mainAccent4}`, color: "white" }}
+        _expanded={{ bg: `${"darkAccent_2"}`, color: "white" }}
       >
         <Box as="span" flex="1" textAlign="left">
           Click me to see a different style
