--- a/app/mardownExamples/disclosure/21.md
+++ b/app/mardownExamples/disclosure/21.md
@@ -2,10 +2,10 @@
 export function OnChangeTabs() {
   const tabsColors = useColorModeValue(
     [
-      colors.mainAccent,
-      colors.mainAccent2,
-      colors.mainAccent3,
-      colors.mainText,
+      "accent_1",
+      "accent_2",
+      "accent_3",
+      "mainText",
     ],
     ["white", "white", "white", "white"]
   );
