all component highlights are now in markdown for import

--- a/app/mardownExamples/overlay/h01.md
+++ b/app/mardownExamples/overlay/h01.md
@@ -1,3 +1,43 @@
 ```javascript
+export const AgeVerificationDialog: React.FC = () => {
+  const { isOpen, onOpen, onClose } = useDisclosure();
+  const cancelRef = useRef < HTMLButtonElement > null;
 
+  const verifyAge = () => {
+    console.log("Age verified...");
+    onClose();
+  };
+
+  return (
+    <>
+      <Button onClick={onOpen}>Enter Site</Button>
+      <AlertDialog
+        isOpen={isOpen}
+        leastDestructiveRef={cancelRef}
+        onClose={onClose}
+      >
+        <AlertDialogOverlay>
+          <AlertDialogContent>
+            <AlertDialogHeader fontSize="lg" fontWeight="bold">
+              Age Verification
+            </AlertDialogHeader>
+
+            <AlertDialogBody>
+              This site contains age-restricted content. Are you over 18?
+            </AlertDialogBody>
+
+            <AlertDialogFooter>
+              <Button ref={cancelRef} onClick={onClose}>
+                No
+              </Button>
+              <Button colorScheme="green" onClick={verifyAge} ml={3}>
+                Yes, I am over 18
+              </Button>
+            </AlertDialogFooter>
+          </AlertDialogContent>
+        </AlertDialogOverlay>
+      </AlertDialog>
+    </>
+  );
+};
 ```
