--- a/app/mardownExamples/overlay/h03.md
+++ b/app/mardownExamples/overlay/h03.md
@@ -1,3 +1,43 @@
 ```javascript
+export const UnsavedChangesAlert: React.FC = () => {
+  const { isOpen, onOpen, onClose } = useDisclosure();
+  const cancelRef = useRef < HTMLButtonElement > null;
 
+  const confirmNavigation = () => {
+    console.log("Navigating away...");
+    onClose();
+  };
+
+  return (
+    <>
+      <Button onClick={onOpen}>Navigate Away</Button>
+      <AlertDialog
+        isOpen={isOpen}
+        leastDestructiveRef={cancelRef}
+        onClose={onClose}
+      >
+        <AlertDialogOverlay>
+          <AlertDialogContent>
+            <AlertDialogHeader fontSize="lg" fontWeight="bold">
+              Unsaved Changes
+            </AlertDialogHeader>
+
+            <AlertDialogBody>
+              You have unsaved changes. Are you sure you want to leave?
+            </AlertDialogBody>
+
+            <AlertDialogFooter>
+              <Button ref={cancelRef} onClick={onClose}>
+                No, Keep Editing
+              </Button>
+              <Button colorScheme="red" onClick={confirmNavigation} ml={3}>
+                Yes, Leave
+              </Button>
+            </AlertDialogFooter>
+          </AlertDialogContent>
+        </AlertDialogOverlay>
+      </AlertDialog>
+    </>
+  );
+};
 ```
