started on menus

--- a/app/mardownExamples/overlay/05.md
+++ b/app/mardownExamples/overlay/05.md
@@ -1,3 +1,29 @@
 ```javascript
+<Button ref={btnRef} colorScheme="teal" onClick={onOpen}>
+  Open
+</Button>
 
+<Drawer
+  isOpen={isOpen}
+  placement="right"
+  initialFocusRef={initialFocusRef}
+  onClose={handleClose}
+>
+  <DrawerContent padding={4} bg="sectionColor">
+    <Select placeholder="Select an option" mb={4} color="white">
+      <option value="option1">Option 1</option>
+      <option value="option2">Option 2</option>
+      <option value="option3">Option 3</option>
+    </Select>
+
+    <Input mb={3} ref={initialFocusRef} placeholder="Enter your name" />
+    <Textarea placeholder="Enter your message" mb={4} />
+    <DrawerFooter>
+      <Button variant="outline" mr={3} onClick={onClose} color="white">
+        Cancel
+      </Button>
+      <Button colorScheme="blue">Save</Button>
+    </DrawerFooter>
+  </DrawerContent>
+</Drawer>
 ```
