--- a/app/mardownExamples/overlay/06.md
+++ b/app/mardownExamples/overlay/06.md
@@ -1,3 +1,25 @@
 ```javascript
+{
+  sizes.map((size) => (
+    <Button
+      size="sm"
+      w="100px"
+      onClick={() => handleClick(size)}
+      key={size}
+      m={2}
+      p={1}
+    >{`${size} Drawer`}</Button>
+  ));
+}
 
+<Drawer onClose={onClose} isOpen={isOpen} size={size}>
+  <DrawerOverlay />
+  <DrawerContent>
+    <DrawerCloseButton />
+    <DrawerHeader>{`${size} drawer contents`}</DrawerHeader>
+    <DrawerBody>
+      <p>Some suprisingly funny jokes...</p>
+    </DrawerBody>
+  </DrawerContent>
+</Drawer>;
 ```
