--- a/app/mardownExamples/overlay/h04.md
+++ b/app/mardownExamples/overlay/h04.md
@@ -1,3 +1,46 @@
 ```javascript
+export const DrawerNestedNavigation = () => {
+  const [isOpen, setIsOpen] = useState(false);
 
+  const toggleSubMenu = () => {
+    setIsOpen(!isOpen);
+  };
+
+  return (
+    <>
+      <Box>
+        <Button onClick={toggleSubMenu} cursor="pointer" fontWeight="bold">
+          Menu
+        </Button>
+      </Box>
+      <Drawer isOpen={isOpen} onClose={() => setIsOpen(false)} placement="left">
+        <DrawerOverlay>
+          <DrawerContent>
+            <DrawerHeader bg="accent_2">Navigation</DrawerHeader>
+            <DrawerBody bg="sectionColor" color="mainText">
+              <VStack spacing={4} align="stretch">
+                <Link>Home</Link>
+                <Link>Products</Link>
+                <Box pl={4}>
+                  <Text onClick={toggleSubMenu} cursor="pointer">
+                    Services
+                  </Text>
+                  <Collapse in={isOpen}>
+                    <Box pl={4}>
+                      <VStack spacing={4} align="stretch">
+                        <Link>Service 1</Link>
+                        <Link>Service 2</Link>
+                      </VStack>
+                    </Box>
+                  </Collapse>
+                </Box>
+                <Link>About</Link>
+              </VStack>
+            </DrawerBody>
+          </DrawerContent>
+        </DrawerOverlay>
+      </Drawer>
+    </>
+  );
+};
 ```
