--- a/app/mardownExamples/overlay/h06.md
+++ b/app/mardownExamples/overlay/h06.md
@@ -1,3 +1,59 @@
 ```javascript
+export const DrawerNotificationsPanel = () => {
+  const [isOpen, setIsOpen] = useState(false);
+  const [notifications, setNotifications] = useState<string[]>([]);
+  const toast = useToast();
+
+  const handleOpenDrawer = () => {
+    setIsOpen(true);
+  };
+
+  const handleCloseDrawer = () => {
+    setIsOpen(false);
+  };
+
+  const handleAddNotification = () => {
+    const newNotification = `Notification ${notifications.length + 1}`;
+    setNotifications((prevNotifications) => [
+      ...prevNotifications,
+      newNotification,
+    ]);
+    toast({
+      title: "Notification Added",
+      description: newNotification,
+      status: "success",
+      duration: 3000,
+      isClosable: true,
+    });
+  };
+
+  return (
+    <VStack spacing={3} w="100%">
+      <Button onClick={handleOpenDrawer}>Open Notifications</Button>
+      <Drawer
+        isOpen={isOpen}
+        onClose={handleCloseDrawer}
+        placement="right"
+        size="sm"
+      >
+        <DrawerOverlay />
+        <DrawerContent bg="accent_3">
+          <DrawerHeader>Notifications Panel</DrawerHeader>
+          <DrawerBody>
+            <Stack spacing={4}>
+              {notifications.map((notification, index) => (
+                <Badge key={index} variant="subtle" colorScheme="red">
+                  {notification}
+                </Badge>
+              ))}
+              {notifications.length === 0 && <p>No notifications</p>}
+            </Stack>
+          </DrawerBody>
+        </DrawerContent>
+      </Drawer>
+      <Button onClick={handleAddNotification}>Add Notification</Button>
+    </VStack>
+  );
+};
 
 ```
