--- a/app/mardownExamples/overlay/09.md
+++ b/app/mardownExamples/overlay/09.md
@@ -1,3 +1,17 @@
 ```javascript
-
+<Menu>
+  {({ isOpen }) => (
+    <>
+      <MenuButton isActive={isOpen} as={Button} rightIcon={<ChevronDownIcon />}>
+        {isOpen ? "Close" : "Open"}
+      </MenuButton>
+      <MenuList color="black">
+        <MenuItem>Do Something</MenuItem>
+        <MenuItem onClick={() => alert("You are on alert!")}>
+          Do Something Better
+        </MenuItem>
+      </MenuList>
+    </>
+  )}
+</Menu>
 ```
