--- a/app/mardownExamples/overlay/17.md
+++ b/app/mardownExamples/overlay/17.md
@@ -1,3 +1,38 @@
 ```javascript
+<Button mt={4} onClick={onOpen}>
+    Launch Modal
+</Button>
 
+<Modal finalFocusRef={endRef} isOpen={isOpen} onClose={onClose}>
+    <ModalOverlay />
+    <ModalContent>
+    <ModalHeader>MODAL HEADER</ModalHeader>
+    <ModalCloseButton />
+    <ModalBody>
+        <p>
+        Any custom content can go here like text, form inputs, images
+        etc.
+        </p>
+    </ModalBody>
+
+    <ModalFooter>
+        <Button colorScheme="purple" mr={3} onClick={onClose}>
+        Close
+        </Button>
+        <Button variant="outline">Other Action</Button>
+    </ModalFooter>
+    </ModalContent>
+</Modal>
+
+<Box
+    bg="accent_2"
+    p={[4, 1]}
+    mt={2}
+    color="darkText"
+    ref={endRef}
+    tabIndex={-1}
+    aria-label="Focus will shift to this box when the modal closes."
+>
+    A different element that will capture focus after modal closes.
+</Box>
 ```
