--- a/app/mardownExamples/overlay/18.md
+++ b/app/mardownExamples/overlay/18.md
@@ -1,3 +1,36 @@
 ```javascript
+<Button onClick={onOpen}>Launch Modal</Button>
+<Box ref={endRef} bg="accent_2" p={[4, 1]} mt={2} color="darkText">
+    Focus will move here when modal closes
+</Box>
+<Modal
+    initialFocusRef={startRef}
+    finalFocusRef={endRef}
+    isOpen={isOpen}
+    onClose={onClose}
+>
+    <ModalOverlay />
+    <ModalContent>
+    <ModalHeader>Create Your Profile</ModalHeader>
+    <ModalCloseButton />
+    <ModalBody pb={6}>
+        <FormControl>
+        <FormLabel>First Name</FormLabel>
+        <Input ref={startRef} placeholder="Enter your first name" />
+        </FormControl>
 
+        <FormControl mt={4}>
+        <FormLabel>Last Name</FormLabel>
+        <Input placeholder="Enter your last name" />
+        </FormControl>
+    </ModalBody>
+
+    <ModalFooter>
+        <Button colorScheme="green" mr={3}>
+        Submit
+        </Button>
+        <Button onClick={onClose}>Dismiss</Button>
+    </ModalFooter>
+    </ModalContent>
+</Modal>
 ```
