--- a/app/mardownExamples/overlay/h07.md
+++ b/app/mardownExamples/overlay/h07.md
@@ -1,3 +1,33 @@
 ```javascript
+export function FormMenuExample() {
+  const { isOpen, onOpen, onClose } = useDisclosure();
+  const [fruit, setFruit] = useState("Choose a fruit");
 
+  const handleMenuItemClick = (fruitName: string) => {
+    setFruit(fruitName);
+    onClose();
+  };
+
+  return (
+    <Box>
+      <Menu isOpen={isOpen} onOpen={onOpen} onClose={onClose}>
+        <MenuButton as={Button} rightIcon={<ChevronDownIcon />}>
+          {fruit}
+        </MenuButton>
+        <MenuList color="black">
+          <MenuItem onClick={() => handleMenuItemClick("Apple")}>
+            Apple
+          </MenuItem>
+          <MenuItem onClick={() => handleMenuItemClick("Banana")}>
+            Banana
+          </MenuItem>
+          <MenuItem onClick={() => handleMenuItemClick("Cherry")}>
+            Cherry
+          </MenuItem>
+        </MenuList>
+      </Menu>
+      <Input mt={4} value={fruit} readOnly />
+    </Box>
+  );
+}
 ```
