--- a/app/mardownExamples/overlay/h08.md
+++ b/app/mardownExamples/overlay/h08.md
@@ -1,3 +1,23 @@
 ```javascript
-
+<Menu>
+  <MenuButton
+    as={Button}
+    rightIcon={<ChevronDownIcon />}
+    bg="purple.500"
+    color="white"
+    _hover={{ bg: "purple.600" }}
+  >
+    Actions
+  </MenuButton>
+  <MenuList color="black">
+    <MenuItem>Option 1</MenuItem>
+    <MenuDivider
+      borderColor="purple.500"
+      borderWidth={2}
+      m={2}
+      _focus={{ borderColor: "pink.500" }}
+    />
+    <MenuItem>Option 2</MenuItem>
+  </MenuList>
+</Menu>
 ```
