--- a/app/mardownExamples/overlay/h09.md
+++ b/app/mardownExamples/overlay/h09.md
@@ -1,3 +1,27 @@
 ```javascript
+<Menu>
+  <ButtonGroup>
+    <Button w="140px" colorScheme="teal" onClick={() => console.log(action)}>
+      {action}
+    </Button>
+    <MenuButton
+      as={Button}
+      rightIcon={<ChevronDownIcon />}
+      colorScheme="teal"
+    ></MenuButton>
+  </ButtonGroup>
 
+  <MenuList>
+    <MenuItem onClick={() => handleActionChange("First Action")}>
+      First Action
+    </MenuItem>
+    <MenuItem onClick={() => handleActionChange("Second Action")}>
+      Second Action
+    </MenuItem>
+    <MenuDivider />
+    <MenuItem onClick={() => handleActionChange("Third Action")}>
+      Third Action
+    </MenuItem>
+  </MenuList>
+</Menu>
 ```
