--- a/app/mardownExamples/overlay/h12.md
+++ b/app/mardownExamples/overlay/h12.md
@@ -1,3 +1,90 @@
 ```javascript
+export function Magic8Modal() {
+  const [isOpen, setIsOpen] = useState(false);
+  const [answer, setAnswer] = useState("");
 
+  const handleOpen = () => {
+    setIsOpen(true);
+    setAnswer("");
+  };
+
+  const handleClose = () => {
+    setIsOpen(false);
+  };
+
+  const handleAsk = () => {
+    const answers = [
+      "It is certain.",
+      "Reply hazy, try again.",
+      "It is decidedly so.",
+      "Ask again later.",
+      "Without a doubt.",
+      "Yes, definitely!",
+      "You may rely on it.",
+      "As I see it, yes.",
+      "Most likely.",
+      "Better not tell you now...",
+      "Cannot predict now...",
+      "Concentrate, and ask again.",
+      "Don’t count on it.",
+      "My reply is no.",
+      "My sources say 'no'.",
+      "Outlook not so good.",
+      "Very doubtful.",
+      "Outlook good.",
+      "Yes!",
+      "Outlook good!",
+      "Signs point to yes!",
+    ];
+    const randomAnswer = answers[Math.floor(Math.random() * answers.length)];
+    setAnswer(randomAnswer);
+  };
+
+  const handleAskAgain = () => {
+    setAnswer("");
+  };
+
+  return (
+    <>
+      <Button onClick={handleOpen}>Ask the Magic 8 Ball</Button>
+
+      <Modal isOpen={isOpen} onClose={handleClose}>
+        <ModalOverlay />
+        <ModalContent>
+          <MyFlex>
+            <ModalHeader>Ask the Magic 8 Ball</ModalHeader>
+
+            <Image
+              src="https://www.meijer.com/content/dam/meijer/product/0008/56/3307/09/0008563307099_1_A1C1_0600.png"
+              w="50%"
+            />
+          </MyFlex>
+          <ModalBody>
+            <MyFlex bg="black" color="white" h="50px">
+              {answer ? (
+                <Text fontSize="lg" fontWeight="bold" textAlign="center">
+                  {answer}
+                </Text>
+              ) : null}
+            </MyFlex>
+          </ModalBody>
+          <ModalFooter>
+            {!answer ? (
+              <Button size="sm" m={3} w="80px" onClick={handleAsk} mr={2}>
+                Ask
+              </Button>
+            ) : (
+              <Button size="sm" m={3} w="80px" onClick={handleAskAgain} mr={2}>
+                Ask Again
+              </Button>
+            )}
+            <Button size="sm" m={3} w="80px" onClick={handleClose} mr={2}>
+              Close
+            </Button>
+          </ModalFooter>
+        </ModalContent>
+      </Modal>
+    </>
+  );
+}
 ```
