--- a/app/mardownExamples/overlay/10.md
+++ b/app/mardownExamples/overlay/10.md
@@ -1,3 +1,34 @@
 ```javascript
+const CustomButton = forwardRef<HTMLButtonElement, any>((props, ref) => {
+  return (
+    <Box
+      as="button"
+      bg="purple.300"
+      color="blue.700"
+      fontWeight="bold"
+      py={2}
+      px={4}
+      borderRadius="sm"
+      ref={ref}
+      {...props}
+    >
+      Custom Button
+    </Box>
+  );
+});
 
+export function MenuFunctionThree() {
+  return (
+
+      <Menu>
+        <MenuButton as={CustomButton} />
+        <MenuList color="black">
+          <MenuItem>Option 1</MenuItem>
+          <MenuItem>Option 2</MenuItem>
+          <MenuItem>Option 3</MenuItem>
+        </MenuList>
+      </Menu>
+
+  );
+}
 ```
