--- a/app/mardownExamples/overlay/13.md
+++ b/app/mardownExamples/overlay/13.md
@@ -1,3 +1,27 @@
 ```javascript
-
+<Menu>
+  <HStack spacing={6}>
+    <MenuButton
+      as={IconButton}
+      aria-label="Options"
+      icon={<HamburgerIcon color="deeppink" />}
+      variant="outline"
+    />
+    <h2>Whaddamenu!</h2>
+  </HStack>
+  <MenuList color="black">
+    <MenuItem icon={<AddIcon />} command="⌘T">
+      New Tab
+    </MenuItem>
+    <MenuItem icon={<ExternalLinkIcon />} command="⌘N">
+      New Window
+    </MenuItem>
+    <MenuItem icon={<RepeatIcon />} command="⌘⇧N">
+      Open Closed Tab
+    </MenuItem>
+    <MenuItem icon={<EditIcon />} command="⌘O">
+      Open File...
+    </MenuItem>
+  </MenuList>
+</Menu>
 ```
