--- a/app/mardownExamples/overlay/16.md
+++ b/app/mardownExamples/overlay/16.md
@@ -1,3 +1,19 @@
 ```javascript
+<Modal isOpen={isOpen} onClose={onClose}>
+  <ModalOverlay />
+  <ModalContent>
+    <ModalHeader>MODAL HEADER</ModalHeader>
+    <ModalCloseButton />
+    <ModalBody>
+      <p>This is where the modal's content goes.</p>
+    </ModalBody>
 
+    <ModalFooter>
+      <Button colorScheme="green" mr={3} onClick={onClose}>
+        Dismiss
+      </Button>
+      <Button variant="outline">Other Action</Button>
+    </ModalFooter>
+  </ModalContent>
+</Modal>
 ```
