--- a/app/mardownExamples/overlay/20.md
+++ b/app/mardownExamples/overlay/20.md
@@ -1,3 +1,33 @@
 ```javascript
+const sizes = ["xs", "sm", "md", "lg", "xl", "full"];
+return (
+  <>
+    <SimpleGrid columns={2} gap={3}>
+      {sizes.map((size) => (
+        <Button
+          size="sm"
+          onClick={() => handleSizeClick(size)}
+          key={size}
+          m={2}
+        >{`Open ${size} Modal`}</Button>
+      ))}
+    </SimpleGrid>
 
+    <Modal onClose={onClose} size={size} isOpen={isOpen}>
+      <ModalOverlay />
+      <ModalContent>
+        <ModalHeader>Modal Title</ModalHeader>
+        <ModalCloseButton />
+        <ModalBody>
+          <MyFlex>
+            <Image src="https://placekitten.com/640/360" />
+          </MyFlex>
+        </ModalBody>
+        <ModalFooter>
+          <Button onClick={onClose}>Close</Button>
+        </ModalFooter>
+      </ModalContent>
+    </Modal>
+  </>
+);
 ```
