--- a/app/mardownExamples/overlay/h10.md
+++ b/app/mardownExamples/overlay/h10.md
@@ -1,3 +1,35 @@
 ```javascript
+export function NestedModal() {
+  const { isOpen, onOpen, onClose } = useDisclosure();
+  const {
+    isOpen: secondIsOpen,
+    onOpen: secondOnOpen,
+    onClose: secondOnClose,
+  } = useDisclosure();
 
+  return (
+    <>
+      <Button onClick={onOpen}>Open Modal</Button>
+
+      <Modal size="xl" isOpen={isOpen} onClose={onClose}>
+        <ModalOverlay />
+        <ModalContent>
+          <Image src="https://generative-placeholders.glitch.me/image?width=600&height=300&style=cubic-disarray" />
+          <ModalHeader>First Modal</ModalHeader>
+          <ModalBody>
+            <Button onClick={secondOnOpen}>Open Nested Modal</Button>
+
+            <Modal size="xs" isOpen={secondIsOpen} onClose={secondOnClose}>
+              <ModalOverlay />
+              <ModalContent>
+                <ModalHeader>Nested Modal</ModalHeader>
+                <Image src="https://generative-placeholders.glitch.me/image?width=100&height=100&style=123" />
+              </ModalContent>
+            </Modal>
+          </ModalBody>
+        </ModalContent>
+      </Modal>
+    </>
+  );
+}
 ```
