--- a/app/mardownExamples/overlay/24.md
+++ b/app/mardownExamples/overlay/24.md
@@ -1,3 +1,143 @@
 ```javascript
+const positiveAdjectives = [
+  "Amazing",
+  "Brilliant",
+  "Caring",
+  "Delightful",
+  "Energetic",
+  "Fantastic",
+  "Genuine",
+  "Happy",
+  "Incredible",
+  "Joyful",
+  "Kind",
+  "Lively",
+  "Magnificent",
+  "Optimistic",
+  "Passionate",
+  "Radiant",
+  "Spectacular",
+  "Terrific",
+  "Unforgettable",
+  "Vibrant",
+];
 
+export function PopoverFunctionFour() {
+  const inputRef = useRef < HTMLInputElement > null;
+  const buttonRef = useRef < HTMLButtonElement > null;
+  const [value, setValue] = useState("");
+  const [isOpen, setIsOpen] = useState(false);
+  const [selectedAdjective, setSelectedAdjective] = useState("");
+  const [modalIsOpen, setModalIsOpen] = useState(false);
+  const [filteredAdjectives, setFilteredAdjectives] =
+    useState(positiveAdjectives);
+
+  useEffect(() => {
+    inputRef.current?.addEventListener("keydown", (e) => {
+      setIsOpen(true);
+    });
+
+    setFilteredAdjectives(
+      positiveAdjectives.filter((adjective) =>
+        adjective.toLowerCase().includes(value.toLowerCase())
+      )
+    );
+  }, [value]);
+
+  const handleClick = (adjective: string) => {
+    setValue(adjective);
+    buttonRef.current?.focus();
+    setIsOpen(false);
+  };
+
+  const handleSelect = (adjective: string) => {
+    if (value !== "") {
+      setSelectedAdjective(adjective);
+      // setIsOpen(false);
+      setModalIsOpen(true);
+    }
+  };
+
+  const handleClose = () => {
+    setValue("");
+    setSelectedAdjective("");
+    setIsOpen(false);
+    setModalIsOpen(false);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <h2>I am</h2>
+      <Popover
+        initialFocusRef={inputRef}
+        isOpen={isOpen}
+        onOpen={() => setIsOpen(true)}
+      >
+        <PopoverTrigger>
+          <Input
+            w="200px"
+            bg="white"
+            color="black"
+            ref={inputRef}
+            value={value}
+            onChange={(e) => setValue(e.target.value)}
+          />
+        </PopoverTrigger>
+        <PopoverContent
+          w="200px"
+          h="300px"
+          overflowY="scroll"
+          sx={PopoverContentStyles}
+        >
+          <PopoverArrow />
+          <PopoverCloseButton onClick={() => handleClose()} />
+          <PopoverBody sx={PopoverBodyStyles}>
+            <Stack>
+              {filteredAdjectives.map((adjective) => (
+                <Button
+                  w="150px"
+                  size="sm"
+                  key={adjective}
+                  onClick={() => handleClick(adjective)}
+                  variant="ghost"
+                >
+                  {adjective}
+                </Button>
+              ))}
+            </Stack>
+          </PopoverBody>
+        </PopoverContent>
+      </Popover>
+      <Button
+        variant="solid"
+        ref={buttonRef}
+        _focus={{ bg: "pink" }}
+        onClick={() => handleSelect(value)}
+      >
+        Select
+      </Button>
+      <Modal isOpen={modalIsOpen} onClose={handleClose}>
+        <ModalOverlay />
+        <ModalContent>
+          <ModalHeader>Confirmation</ModalHeader>
+          <ModalCloseButton />
+          <ModalBody>
+            <MyFlex textAlign="center">
+              <BiHappy size={60} color="deeppink" />
+              <h2>
+                {" "}
+                Why, yes, you are SO VERY {selectedAdjective.toUpperCase()}!
+              </h2>
+            </MyFlex>
+          </ModalBody>
+          <ModalFooter>
+            <Button colorScheme="pink" onClick={handleClose}>
+              Close
+            </Button>
+          </ModalFooter>
+        </ModalContent>
+      </Modal>
+    </SingleExample>
+  );
+}
 ```
