working on tooltip

--- a/app/mardownExamples/overlay/h13.md
+++ b/app/mardownExamples/overlay/h13.md
@@ -1,3 +1,39 @@
 ```javascript
+type UserDetails = {
+  name: string,
+  email: string,
+};
 
+export function DynamicContentPopover() {
+  const [userDetails, setUserDetails] =
+    (useState < UserDetails) | (null > null);
+
+  const handleOpenPopover = () => {
+    // Fetch user details from API or other source
+    setUserDetails({
+      name: "John Doe",
+      email: "john.doe@example.com",
+    });
+  };
+
+  return (
+    <Popover>
+      <PopoverTrigger>
+        <Button sx={PopoverButtonStyles} onClick={handleOpenPopover}>
+          Show User Details
+        </Button>
+      </PopoverTrigger>
+      <PopoverContent sx={PopoverContentStyles}>
+        <PopoverHeader bg="accent_2" color="black">
+          User Details
+        </PopoverHeader>
+        <PopoverBody>
+          {userDetails
+            ? `Name: ${userDetails.name}, Email: ${userDetails.email}`
+            : "Loading..."}
+        </PopoverBody>
+      </PopoverContent>
+    </Popover>
+  );
+}
 ```
