--- a/app/mardownExamples/overlay/h15.md
+++ b/app/mardownExamples/overlay/h15.md
@@ -1,3 +1,28 @@
 ```javascript
+export function ControlledPopover() {
+  const [isOpen, setIsOpen] = useState(false);
+  const handleOpen = () => setIsOpen(!isOpen);
 
+  return (
+    <Box>
+      <Button sx={PopoverButtonStyles} onClick={handleOpen}>
+        Toggle Popover
+      </Button>
+      <Popover isOpen={isOpen} onOpen={handleOpen} onClose={handleOpen}>
+        <PopoverTrigger>
+          <Box visibility="hidden"></Box>
+        </PopoverTrigger>
+        <PopoverContent sx={PopoverContentStyles}>
+          <PopoverHeader sx={PopoverHeaderStyles}>
+            Controlled Popover
+          </PopoverHeader>
+          <PopoverBody sx={PopoverBodyStyles}>
+            The opening and closing of this Popover is controlled manually using
+            state.
+          </PopoverBody>
+        </PopoverContent>
+      </Popover>
+    </Box>
+  );
+}
 ```
