almost done with tooltip

--- a/app/mardownExamples/overlay/32.md
+++ b/app/mardownExamples/overlay/32.md
@@ -1,3 +1,9 @@
 ```javascript
-
+export function TooltipFunctionFive() {
+  return (
+    <Tooltip hasArrow label="Click to proceed">
+      <Button sx={ToolTipButtonStyles}>Proceed</Button>
+    </Tooltip>
+  );
+}
 ```
