--- a/app/mardownExamples/overlay/33.md
+++ b/app/mardownExamples/overlay/33.md
@@ -1,3 +1,67 @@
 ```javascript
+type Placement =
+  | "auto-start"
+  | "auto"
+  | "auto-end"
+  | "top-start"
+  | "top"
+  | "top-end"
+  | "right-start"
+  | "right"
+  | "right-end"
+  | "bottom-start"
+  | "bottom"
+  | "bottom-end"
+  | "left-start"
+  | "left"
+  | "left-end";
 
+const placements: Placement[] = [
+  "auto-start",
+  "auto",
+  "auto-end",
+  "top-start",
+  "top",
+  "top-end",
+  "right-start",
+  "right",
+  "right-end",
+  "bottom-start",
+  "bottom",
+  "bottom-end",
+  "left-start",
+  "left",
+  "left-end",
+];
+
+export function TooltipFunctionSix() {
+  const [placement, setPlacement] = useState<Placement>("auto");
+
+  return (
+      <HStack w="100%" justifyContent="space-evenly">
+        <Select
+          bg="white"
+          color="black"
+          w="175px"
+          placeholder="Placement Options"
+          onChange={(e) => setPlacement(e.target.value as Placement)}
+        >
+          {placements.map((placement, index) => (
+            <option key={index} value={placement}>
+              {placement}
+            </option>
+          ))}
+        </Select>
+        <Tooltip
+          label={`${placement} placement`}
+          hasArrow
+          placement={placement}
+        >
+          <Button w="175px" h="150px">
+            Hover for Placement
+          </Button>
+        </Tooltip>
+      </HStack>
+  );
+}
 ```
