--- a/app/mardownExamples/overlay/27.md
+++ b/app/mardownExamples/overlay/27.md
@@ -37,22 +37,31 @@ export function PopoverFunctionSix() {
 
   return (
     <SingleExample bg="background">
-      <Flex wrap="wrap" justifyContent="space-around">
-        {placements.map((placement) => (
-          <Box p={1} key={placement}>
-            <Popover placement={placement}>
-              <PopoverTrigger>
-                <Button size="sm" p={2} sx={PopoverButtonStyles}>
-                  {placement}
-                </Button>
-              </PopoverTrigger>
-              <PopoverContent>
-                <Text p={3}>Popover on {placement}</Text>
-              </PopoverContent>
-            </Popover>
-          </Box>
-        ))}
-      </Flex>
+      <HStack w="100%" justifyContent="space-evenly">
+        <Box p={1}>
+          <Popover placement={selectedPlacement}>
+            <PopoverTrigger>
+              <Flex>
+                <h2>Click to see Popover placement.</h2>
+              </Flex>
+            </PopoverTrigger>
+            <PopoverContent bg="accent_1" color="black">
+              <Text p={3}>Popover with {selectedPlacement} placement.</Text>
+            </PopoverContent>
+          </Popover>
+        </Box>
+
+        <Select
+          placeholder="Placement Options"
+          onChange={(e) => setSelectedPlacement(e.target.value as Placement)}
+        >
+          {placements.map((placement) => (
+            <option key={placement} value={placement}>
+              {placement}
+            </option>
+          ))}
+        </Select>
+      </HStack>
     </SingleExample>
   );
 }
