refactored entire site with new colors and organization

--- a/app/mardownExamples/feedback/h12.md
+++ b/app/mardownExamples/feedback/h12.md
@@ -5,9 +5,9 @@ export function ImageWithSkeleton() {
   return (
     <Skeleton isLoaded={hasLoaded} boxSize="200px">
       <Image
-        src="https://placekitten.com/200/200"
+        src="imageURL"
         onLoad={() => setHasLoaded(true)}
-        alt="A cute kitten"
+        alt="Image Description"
       />
     </Skeleton>
   );
