finished overlays, made modal overlay blur, little tweaks

--- a/app/mardownExamples/overlay/h17.md
+++ b/app/mardownExamples/overlay/h17.md
@@ -1,3 +1,21 @@
 ```javascript
+export function DynamicTooltipExample() {
+  const [isClicked, setIsClicked] = useBoolean(false);
 
+  const handleClick = () => setIsClicked.toggle();
+
+  return (
+    <Tooltip
+      bg="accent_1"
+      color="background"
+      placement="bottom"
+      label={isClicked ? "You did it!!" : "Click me"}
+      closeDelay={3000}
+    >
+      <Button sx={ButtonStyles} onClick={handleClick}>
+        Dynamic Tooltip
+      </Button>
+    </Tooltip>
+  );
+}
 ```
