--- a/app/mardownExamples/overlay/h18.md
+++ b/app/mardownExamples/overlay/h18.md
@@ -1,3 +1,14 @@
 ```javascript
-
+export function DelayedTooltipExample() {
+  return (
+    <Tooltip
+      bg="accent_1"
+      color="background"
+      label="I appear after 1 second"
+      openDelay={1000}
+    >
+      <Button sx={ButtonStyles}>Wait for it...</Button>
+    </Tooltip>
+  );
+}
 ```
